// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPlatformReviewDSLRepresentation should get the activities 1`] = `
Array [
  Object {
    "comment": Object {
      "content": Object {
        "html": "<p>⚠️ 1 Warning. Don't worry, everything is fixable.</p>
<table>
<thead>
<tr>
<th></th>
<th>1 Warning</th>
</tr>
</thead>
<tbody>
<tr>
<td>⚠️</td>
<td>Couldn't find any related issue</td>
</tr>
</tbody>
</table>
<table>
<thead>
<tr>
<th></th>
<th>1 Message</th>
</tr>
</thead>
<tbody>
<tr>
<td>✨</td>
<td>Rerun Danger <a href=\\"https://bitbucket.org/foo/bar/addon/pipelines/home#!/results/1007\\" rel=\\"nofollow\\" class=\\"ap-connect-link\\">https://bitbucket.org/foo/bar/addon/pipelines/home#!/results/1007</a></td>
</tr>
</tbody>
</table>
<p>Generated by <a data-is-external-link=\\"true\\" href=\\"https://danger.systems/\\" rel=\\"nofollow\\" title=\\"generated_by_danger\\">Danger</a></p>",
        "markup": "markdown",
        "raw": "⚠️ 1 Warning. Don't worry, everything is fixable.

| | 1 Warning |
|---|---|
| ⚠️ | Couldn't find any related issue |

| | 1 Message |
|---|---|
| ✨ | Rerun Danger https://bitbucket.org/foo/bar/addon/pipelines/home#!/results/1007 |



Generated by [Danger](https://danger.systems/ \\"generated_by_danger\\")
",
        "type": "rendered",
      },
      "created_on": "2019-06-20T04:53:23.618489+00:00",
      "deleted": false,
      "id": 106400843,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324/_/diff#comment-106400843",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/comments/106400843",
        },
      },
      "pullrequest": Object {
        "id": 324,
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/pull-requests/324",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
          },
        },
        "title": "Test PR Title",
        "type": "pullrequest",
      },
      "type": "pullrequest_comment",
      "updated_on": "2019-06-20T04:53:23.680568+00:00",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
    },
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
  },
  Object {
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
    "update": Object {
      "author": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
      "date": "2019-06-20T04:52:35.558260+00:00",
      "description": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)
* Extract issue from PR title",
      "destination": Object {
        "branch": Object {
          "name": "develop",
        },
        "commit": Object {
          "hash": "7f498a169d6f",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/7f498a169d6f",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/7f498a169d6f",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "reason": "",
      "source": Object {
        "branch": Object {
          "name": "fix/add-danger-message",
        },
        "commit": Object {
          "hash": "007bf2423436",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/007bf2423436",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/007bf2423436",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "state": "OPEN",
      "title": "Test PR Title",
    },
  },
  Object {
    "approval": Object {
      "date": "2019-06-19T15:54:52.598340+00:00",
      "pullrequest": Object {
        "id": 324,
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/pull-requests/324",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
          },
        },
        "title": "Test PR Title",
        "type": "pullrequest",
      },
      "user": Object {
        "account_id": "5af3c70fa971e7675f4d8882",
        "display_name": "Hello World",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5af3c70fa971e7675f4d8882/f7377cbf-0745-4562-9244-0f4547d6c1f7/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B72609b93-5f99-40f3-82d1-11a8eabf44ac%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B72609b93-5f99-40f3-82d1-11a8eabf44ac%7D",
          },
        },
        "nickname": "Hello World",
        "type": "user",
        "uuid": "{72609b93-5f99-40f3-82d1-11a8eabf44ac}",
      },
    },
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
  },
  Object {
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
    "update": Object {
      "author": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
      "date": "2019-06-19T10:50:38.261370+00:00",
      "description": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)
* Extract issue from PR title",
      "destination": Object {
        "branch": Object {
          "name": "develop",
        },
        "commit": Object {
          "hash": "d7c2ca8906e4",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/d7c2ca8906e4",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/d7c2ca8906e4",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "reason": "",
      "source": Object {
        "branch": Object {
          "name": "fix/add-danger-message",
        },
        "commit": Object {
          "hash": "5d64aec89d72",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/5d64aec89d72",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/5d64aec89d72",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "state": "OPEN",
      "title": "Test PR Title",
    },
  },
  Object {
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
    "update": Object {
      "author": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
      "date": "2019-06-19T10:49:50.100440+00:00",
      "description": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)



TODO:

* Extract issue from PR title



Note:

PR-Number

CIRCLE\\\\_PR\\\\_NUMBER  
BUDDYBUILD\\\\_PULL\\\\_REQUEST

[https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/\\\\{workspace\\\\}/\\\\{repo\\\\_slug\\\\}/pullrequests/\\\\{pullrequest\\\\_id\\\\}/properties/\\\\{app\\\\_key\\\\}/\\\\{property\\\\_name\\\\}](https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/%7Bworkspace%7D/%7Brepo_slug%7D/pullrequests/%7Bpullrequest_id%7D/properties/%7Bapp_key%7D/%7Bproperty_name%7D)",
      "destination": Object {
        "branch": Object {
          "name": "develop",
        },
        "commit": Object {
          "hash": "d7c2ca8906e4",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/d7c2ca8906e4",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/d7c2ca8906e4",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "reason": "",
      "source": Object {
        "branch": Object {
          "name": "fix/add-danger-message",
        },
        "commit": Object {
          "hash": "5d64aec89d72",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/5d64aec89d72",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/5d64aec89d72",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "state": "OPEN",
      "title": "[WIP] Test PR Title",
    },
  },
  Object {
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
    "update": Object {
      "author": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
      "date": "2019-06-19T09:46:23.196852+00:00",
      "description": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)



TODO:

* Extract issue from PR title



Note:

PR-Number

CIRCLE\\\\_PR\\\\_NUMBER  
BUDDYBUILD\\\\_PULL\\\\_REQUEST

[https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/\\\\{workspace\\\\}/\\\\{repo\\\\_slug\\\\}/pullrequests/\\\\{pullrequest\\\\_id\\\\}/properties/\\\\{app\\\\_key\\\\}/\\\\{property\\\\_name\\\\}](https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/%7Bworkspace%7D/%7Brepo_slug%7D/pullrequests/%7Bpullrequest_id%7D/properties/%7Bapp_key%7D/%7Bproperty_name%7D)",
      "destination": Object {
        "branch": Object {
          "name": "develop",
        },
        "commit": Object {
          "hash": "e2cb8ca5a343",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/e2cb8ca5a343",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/e2cb8ca5a343",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "reason": "",
      "source": Object {
        "branch": Object {
          "name": "fix/add-danger-message",
        },
        "commit": Object {
          "hash": "38a200d3dfd3",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/38a200d3dfd3",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/38a200d3dfd3",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "state": "OPEN",
      "title": "[WIP] Test PR Title",
    },
  },
  Object {
    "comment": Object {
      "content": Object {
        "html": "<p>remove this file</p>",
        "markup": "markdown",
        "raw": "remove this file",
        "type": "rendered",
      },
      "created_on": "2019-06-18T18:23:19.626793+00:00",
      "deleted": false,
      "id": 106174425,
      "inline": Object {},
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324/_/diff#comment-106174425",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/comments/106174425",
        },
      },
      "pullrequest": Object {
        "id": 324,
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/pull-requests/324",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
          },
        },
        "title": "Test PR Title",
        "type": "pullrequest",
      },
      "type": "pullrequest_comment",
      "updated_on": "2019-06-18T18:23:19.636448+00:00",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
    },
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
  },
  Object {
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
    "update": Object {
      "author": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
      "date": "2019-06-18T18:22:35.093052+00:00",
      "description": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)



TODO:

* Extract issue from PR title



Note:

PR-Number

CIRCLE\\\\_PR\\\\_NUMBER  
BUDDYBUILD\\\\_PULL\\\\_REQUEST

[https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/\\\\{workspace\\\\}/\\\\{repo\\\\_slug\\\\}/pullrequests/\\\\{pullrequest\\\\_id\\\\}/properties/\\\\{app\\\\_key\\\\}/\\\\{property\\\\_name\\\\}](https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/%7Bworkspace%7D/%7Brepo_slug%7D/pullrequests/%7Bpullrequest_id%7D/properties/%7Bapp_key%7D/%7Bproperty_name%7D)",
      "destination": Object {
        "branch": Object {
          "name": "develop",
        },
        "commit": Object {
          "hash": "8408baeb00af",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/8408baeb00af",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/8408baeb00af",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "reason": "",
      "source": Object {
        "branch": Object {
          "name": "fix/add-danger-message",
        },
        "commit": Object {
          "hash": "f33e72b3dcbc",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/f33e72b3dcbc",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/f33e72b3dcbc",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "state": "OPEN",
      "title": "[WIP] Test PR Title",
    },
  },
  Object {
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
    "update": Object {
      "author": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
      "date": "2019-06-18T18:21:57.632231+00:00",
      "description": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)



TODO:

* Extract issue from PR title



Note:

PR-Number

CIRCLE\\\\_PR\\\\_NUMBER  
BUDDYBUILD\\\\_PULL\\\\_REQUEST

[https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/\\\\{workspace\\\\}/\\\\{repo\\\\_slug\\\\}/pullrequests/\\\\{pullrequest\\\\_id\\\\}/properties/\\\\{app\\\\_key\\\\}/\\\\{property\\\\_name\\\\}](https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/%7Bworkspace%7D/%7Brepo_slug%7D/pullrequests/%7Bpullrequest_id%7D/properties/%7Bapp_key%7D/%7Bproperty_name%7D)",
      "destination": Object {
        "branch": Object {
          "name": "develop",
        },
        "commit": Object {
          "hash": "8408baeb00af",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/8408baeb00af",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/8408baeb00af",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "reason": "",
      "source": Object {
        "branch": Object {
          "name": "fix/add-danger-message",
        },
        "commit": Object {
          "hash": "f33e72b3dcbc",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/f33e72b3dcbc",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/f33e72b3dcbc",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "state": "OPEN",
      "title": "[WIP] Improve flow",
    },
  },
  Object {
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
    "update": Object {
      "author": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
      "date": "2019-06-18T18:10:51.575614+00:00",
      "description": "",
      "destination": Object {
        "branch": Object {
          "name": "develop",
        },
        "commit": Object {
          "hash": "8408baeb00af",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/8408baeb00af",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/8408baeb00af",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "reason": "",
      "source": Object {
        "branch": Object {
          "name": "fix/add-danger-message",
        },
        "commit": Object {
          "hash": "f33e72b3dcbc",
          "links": Object {
            "html": Object {
              "href": "https://bitbucket.org/foo/bar/commits/f33e72b3dcbc",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/f33e72b3dcbc",
            },
          },
          "type": "commit",
        },
        "repository": Object {
          "full_name": "foo/bar",
          "links": Object {
            "avatar": Object {
              "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
            },
            "html": Object {
              "href": "https://bitbucket.org/foo/bar",
            },
            "self": Object {
              "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
            },
          },
          "name": "foobar",
          "type": "repository",
          "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
        },
      },
      "state": "OPEN",
      "title": "Add danger message",
    },
  },
]
`;

exports[`getPlatformReviewDSLRepresentation should get the commits of the pull request 1`] = `
Array [
  Object {
    "author": Object {
      "raw": "Hello Core <foo@bar.com>",
      "type": "author",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "Hello Core",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "Hello Core",
        "type": "user",
        "uuid": "{b582acac-f1c1-47a8-a29b-e4c01c5274ab}",
      },
    },
    "date": "2019-05-13T13:24:53+00:00",
    "hash": "7f73207cea935b2fd07a76028484c20eb18422ba",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/7f73207cea935b2fd07a76028484c20eb18422ba/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/7f73207cea935b2fd07a76028484c20eb18422ba/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/7f73207cea935b2fd07a76028484c20eb18422ba",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/7f73207cea935b2fd07a76028484c20eb18422ba",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/7f73207cea935b2fd07a76028484c20eb18422ba",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/7f73207cea935b2fd07a76028484c20eb18422ba/statuses",
      },
    },
    "message": "Merged in develop (pull request #174)

Develop to SIT

Approved-by: Hello Core <foo@bar.com>
",
    "parents": Array [
      Object {
        "hash": "77fdf99fcc08dce8bd49c9aedfc7442f2bd40bde",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/77fdf99fcc08dce8bd49c9aedfc7442f2bd40bde",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/77fdf99fcc08dce8bd49c9aedfc7442f2bd40bde",
          },
        },
        "type": "commit",
      },
      Object {
        "hash": "a584f1256b8522cfce4ccc33dfbf157590a6044d",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/a584f1256b8522cfce4ccc33dfbf157590a6044d",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/a584f1256b8522cfce4ccc33dfbf157590a6044d",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>Merged in develop (<a href=\\"https://api.bitbucket.org/foo/bar/pull-requests/174/develop-to-sit\\" rel=\\"nofollow\\" class=\\"ap-connect-link\\">pull request #174</a>)</p>
<p>Develop to SIT</p>
<p>Approved-by: Hello Core <a href=\\"/foo/bar/src/03ac2e2bbf14ea8c6cc40742e9db13e15cdda1b3/&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#98;&#101;&#110;&#122;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;\\">&#98;&#101;&#110;&#122;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;</a></p>",
      "markup": "markdown",
      "raw": "Merged in develop (pull request #174)

Develop to SIT

Approved-by: Hello Core <foo@bar.com>
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Hello Core <foo@bar.com>",
      "type": "author",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "Hello Core",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "Hello Core",
        "type": "user",
        "uuid": "{b582acac-f1c1-47a8-a29b-e4c01c5274ab}",
      },
    },
    "date": "2019-05-13T13:23:12+00:00",
    "hash": "a584f1256b8522cfce4ccc33dfbf157590a6044d",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/a584f1256b8522cfce4ccc33dfbf157590a6044d/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/a584f1256b8522cfce4ccc33dfbf157590a6044d/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/a584f1256b8522cfce4ccc33dfbf157590a6044d",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/a584f1256b8522cfce4ccc33dfbf157590a6044d",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/a584f1256b8522cfce4ccc33dfbf157590a6044d",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/a584f1256b8522cfce4ccc33dfbf157590a6044d/statuses",
      },
    },
    "message": "Merged in fix/temp-change-url (pull request #175)

Update URL SIT

Approved-by: Hello Core <foo@bar.com>
",
    "parents": Array [
      Object {
        "hash": "afccc4576bacac2aa0b7190d339cff600cb15b27",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/afccc4576bacac2aa0b7190d339cff600cb15b27",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/afccc4576bacac2aa0b7190d339cff600cb15b27",
          },
        },
        "type": "commit",
      },
      Object {
        "hash": "cc41166d1886d0c12e4def6381b77cd346de8c5d",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/cc41166d1886d0c12e4def6381b77cd346de8c5d",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/cc41166d1886d0c12e4def6381b77cd346de8c5d",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>Merged in fix/temp-change-url (<a href=\\"https://api.bitbucket.org/foo/bar/pull-requests/175/update-url-sit\\" rel=\\"nofollow\\" class=\\"ap-connect-link\\">pull request #175</a>)</p>
<p>Update URL SIT</p>
<p>Approved-by: Hello Core <a href=\\"/foo/bar/src/03ac2e2bbf14ea8c6cc40742e9db13e15cdda1b3/&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#98;&#101;&#110;&#122;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;\\">&#98;&#101;&#110;&#122;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;</a></p>",
      "markup": "markdown",
      "raw": "Merged in fix/temp-change-url (pull request #175)

Update URL SIT

Approved-by: Hello Core <foo@bar.com>
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Hello <hello@abc.com>",
      "type": "author",
      "user": Object {
        "account_id": "557058:ca17e329-f533-4ec0-97d8-9593594f436e",
        "display_name": "Hello Core",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-cdn.atlassian.com/557058%3Aca17e329-f533-4ec0-97d8-9593594f436e?by=id&sg=nfPWnKBLfE%2BzwHFEsgrLMaGywjw%3D&d=https%3A%2F%2Favatar-management--avatars.us-west-2.prod.public.atl-paas.net%2Finitials%2FAC-4.png",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B7bf8c493-5282-4ea0-937c-d6989fa6c0d0%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B7bf8c493-5282-4ea0-937c-d6989fa6c0d0%7D",
          },
        },
        "nickname": "Core00",
        "type": "user",
        "uuid": "{7bf8c493-5282-4ea0-937c-d6989fa6c0d0}",
      },
    },
    "date": "2019-05-13T13:16:22+00:00",
    "hash": "cc41166d1886d0c12e4def6381b77cd346de8c5d",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/cc41166d1886d0c12e4def6381b77cd346de8c5d/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/cc41166d1886d0c12e4def6381b77cd346de8c5d/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/cc41166d1886d0c12e4def6381b77cd346de8c5d",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/cc41166d1886d0c12e4def6381b77cd346de8c5d",
      },
      "patch": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/patch/cc41166d1886d0c12e4def6381b77cd346de8c5d",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/cc41166d1886d0c12e4def6381b77cd346de8c5d",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/cc41166d1886d0c12e4def6381b77cd346de8c5d/statuses",
      },
    },
    "message": "Update URL SIT
",
    "parents": Array [
      Object {
        "hash": "1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>Update URL SIT</p>",
      "markup": "markdown",
      "raw": "Update URL SIT
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Hello Core <foo@bar.com>",
      "type": "author",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "Hello Core",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "Hello Core",
        "type": "user",
        "uuid": "{b582acac-f1c1-47a8-a29b-e4c01c5274ab}",
      },
    },
    "date": "2019-05-13T13:09:42+00:00",
    "hash": "afccc4576bacac2aa0b7190d339cff600cb15b27",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/afccc4576bacac2aa0b7190d339cff600cb15b27/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/afccc4576bacac2aa0b7190d339cff600cb15b27/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/afccc4576bacac2aa0b7190d339cff600cb15b27",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/afccc4576bacac2aa0b7190d339cff600cb15b27",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/afccc4576bacac2aa0b7190d339cff600cb15b27",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/afccc4576bacac2aa0b7190d339cff600cb15b27/statuses",
      },
    },
    "message": "Merged in fix/temp-change-url (pull request #173)

Fix/temp change url

Approved-by: Hello Core <foo@bar.com>
",
    "parents": Array [
      Object {
        "hash": "097d11d21257881ba71157392dfa0f5bf094dc9f",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/097d11d21257881ba71157392dfa0f5bf094dc9f",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/097d11d21257881ba71157392dfa0f5bf094dc9f",
          },
        },
        "type": "commit",
      },
      Object {
        "hash": "1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>Merged in fix/temp-change-url (<a href=\\"https://api.bitbucket.org/foo/bar/pull-requests/173/fix-temp-change-url\\" rel=\\"nofollow\\" class=\\"ap-connect-link\\">pull request #173</a>)</p>
<p>Fix/temp change url</p>
<p>Approved-by: Hello Core <a href=\\"/foo/bar/src/03ac2e2bbf14ea8c6cc40742e9db13e15cdda1b3/&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#98;&#101;&#110;&#122;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;\\">&#98;&#101;&#110;&#122;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;</a></p>",
      "markup": "markdown",
      "raw": "Merged in fix/temp-change-url (pull request #173)

Fix/temp change url

Approved-by: Hello Core <foo@bar.com>
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Hello <hello@abc.com>",
      "type": "author",
      "user": Object {
        "account_id": "557058:ca17e329-f533-4ec0-97d8-9593594f436e",
        "display_name": "Hello Core",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-cdn.atlassian.com/557058%3Aca17e329-f533-4ec0-97d8-9593594f436e?by=id&sg=nfPWnKBLfE%2BzwHFEsgrLMaGywjw%3D&d=https%3A%2F%2Favatar-management--avatars.us-west-2.prod.public.atl-paas.net%2Finitials%2FAC-4.png",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B7bf8c493-5282-4ea0-937c-d6989fa6c0d0%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B7bf8c493-5282-4ea0-937c-d6989fa6c0d0%7D",
          },
        },
        "nickname": "Core00",
        "type": "user",
        "uuid": "{7bf8c493-5282-4ea0-937c-d6989fa6c0d0}",
      },
    },
    "date": "2019-05-13T13:07:12+00:00",
    "hash": "1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
      },
      "patch": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/patch/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/1bf44b3fa31eca7efc68c5d880a9a4d18a2cef71/statuses",
      },
    },
    "message": "Change appConfig Model
",
    "parents": Array [
      Object {
        "hash": "f1646c2a029da975d69524a723771450f4e780cd",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/f1646c2a029da975d69524a723771450f4e780cd",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/f1646c2a029da975d69524a723771450f4e780cd",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>Change appConfig Model</p>",
      "markup": "markdown",
      "raw": "Change appConfig Model
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Hello <hello@abc.com>",
      "type": "author",
      "user": Object {
        "account_id": "557058:ca17e329-f533-4ec0-97d8-9593594f436e",
        "display_name": "Hello Core",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-cdn.atlassian.com/557058%3Aca17e329-f533-4ec0-97d8-9593594f436e?by=id&sg=nfPWnKBLfE%2BzwHFEsgrLMaGywjw%3D&d=https%3A%2F%2Favatar-management--avatars.us-west-2.prod.public.atl-paas.net%2Finitials%2FAC-4.png",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B7bf8c493-5282-4ea0-937c-d6989fa6c0d0%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B7bf8c493-5282-4ea0-937c-d6989fa6c0d0%7D",
          },
        },
        "nickname": "Core00",
        "type": "user",
        "uuid": "{7bf8c493-5282-4ea0-937c-d6989fa6c0d0}",
      },
    },
    "date": "2019-05-13T13:06:37+00:00",
    "hash": "f1646c2a029da975d69524a723771450f4e780cd",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/f1646c2a029da975d69524a723771450f4e780cd/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/f1646c2a029da975d69524a723771450f4e780cd/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/f1646c2a029da975d69524a723771450f4e780cd",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/f1646c2a029da975d69524a723771450f4e780cd",
      },
      "patch": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/patch/f1646c2a029da975d69524a723771450f4e780cd",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/f1646c2a029da975d69524a723771450f4e780cd",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/f1646c2a029da975d69524a723771450f4e780cd/statuses",
      },
    },
    "message": "Change develop URL
",
    "parents": Array [
      Object {
        "hash": "097d11d21257881ba71157392dfa0f5bf094dc9f",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/097d11d21257881ba71157392dfa0f5bf094dc9f",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/097d11d21257881ba71157392dfa0f5bf094dc9f",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>Change develop URL</p>",
      "markup": "markdown",
      "raw": "Change develop URL
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Ryo <ryo@ryo.com>",
      "type": "author",
      "user": Object {
        "account_id": "5c04d48a470dea35d6932c45",
        "display_name": "Ryo Hello",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/initials/RF-1.png",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B98a8e189-6ffd-4e11-9154-e0099023116a%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B98a8e189-6ffd-4e11-9154-e0099023116a%7D",
          },
        },
        "nickname": "Ryo Hello",
        "type": "user",
        "uuid": "{98a8e189-6ffd-4e11-9154-e0099023116a}",
      },
    },
    "date": "2019-05-13T11:44:42+00:00",
    "hash": "097d11d21257881ba71157392dfa0f5bf094dc9f",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/097d11d21257881ba71157392dfa0f5bf094dc9f/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/097d11d21257881ba71157392dfa0f5bf094dc9f/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/097d11d21257881ba71157392dfa0f5bf094dc9f",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/097d11d21257881ba71157392dfa0f5bf094dc9f",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/097d11d21257881ba71157392dfa0f5bf094dc9f",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/097d11d21257881ba71157392dfa0f5bf094dc9f/statuses",
      },
    },
    "message": "Merged in fix/points-history-text-style (pull request #169)

PointsHistoryCard adding a new textstyle

Approved-by: DangerCI <danger@ci.com>
",
    "parents": Array [
      Object {
        "hash": "04eadff2879786f21dd60253c1a5c49a1b72d08b",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/04eadff2879786f21dd60253c1a5c49a1b72d08b",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/04eadff2879786f21dd60253c1a5c49a1b72d08b",
          },
        },
        "type": "commit",
      },
      Object {
        "hash": "5b70bec17deefe19c82782f8bbfbb7e1a7533ac8",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/5b70bec17deefe19c82782f8bbfbb7e1a7533ac8",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/5b70bec17deefe19c82782f8bbfbb7e1a7533ac8",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>Merged in fix/points-history-text-style (<a href=\\"https://api.bitbucket.org/foo/bar/pull-requests/169/pointshistorycard-adding-a-new-textstyle\\" rel=\\"nofollow\\" class=\\"ap-connect-link\\">pull request #169</a>)</p>
<p>PointsHistoryCard adding a new textstyle</p>
<p>Approved-by: DangerCI <a href=\\"/foo/bar/src/03ac2e2bbf14ea8c6cc40742e9db13e15cdda1b3/&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#101;&#100;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;\\">&#101;&#100;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;</a></p>",
      "markup": "markdown",
      "raw": "Merged in fix/points-history-text-style (pull request #169)

PointsHistoryCard adding a new textstyle

Approved-by: DangerCI <danger@ci.com>
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Furyou81 <lfujimot@student.42.fr>",
      "type": "author",
    },
    "date": "2019-05-13T11:41:13+00:00",
    "hash": "5b70bec17deefe19c82782f8bbfbb7e1a7533ac8",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/5b70bec17deefe19c82782f8bbfbb7e1a7533ac8/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/5b70bec17deefe19c82782f8bbfbb7e1a7533ac8/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/5b70bec17deefe19c82782f8bbfbb7e1a7533ac8",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/5b70bec17deefe19c82782f8bbfbb7e1a7533ac8",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/5b70bec17deefe19c82782f8bbfbb7e1a7533ac8",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/5b70bec17deefe19c82782f8bbfbb7e1a7533ac8/statuses",
      },
    },
    "message": "merge
",
    "parents": Array [
      Object {
        "hash": "0f20860ab9b1446d39d6aff4df90d90060ccc329",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/0f20860ab9b1446d39d6aff4df90d90060ccc329",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/0f20860ab9b1446d39d6aff4df90d90060ccc329",
          },
        },
        "type": "commit",
      },
      Object {
        "hash": "04eadff2879786f21dd60253c1a5c49a1b72d08b",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/04eadff2879786f21dd60253c1a5c49a1b72d08b",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/04eadff2879786f21dd60253c1a5c49a1b72d08b",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>merge</p>",
      "markup": "markdown",
      "raw": "merge
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Hello Core <foo@bar.com>",
      "type": "author",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "Hello Core",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "Hello Core",
        "type": "user",
        "uuid": "{b582acac-f1c1-47a8-a29b-e4c01c5274ab}",
      },
    },
    "date": "2019-05-13T11:07:20+00:00",
    "hash": "04eadff2879786f21dd60253c1a5c49a1b72d08b",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/04eadff2879786f21dd60253c1a5c49a1b72d08b/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/04eadff2879786f21dd60253c1a5c49a1b72d08b/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/04eadff2879786f21dd60253c1a5c49a1b72d08b",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/04eadff2879786f21dd60253c1a5c49a1b72d08b",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/04eadff2879786f21dd60253c1a5c49a1b72d08b",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/04eadff2879786f21dd60253c1a5c49a1b72d08b/statuses",
      },
    },
    "message": "Merged in feature/app-icon-temp (pull request #171)

Feature/app icon temp

Approved-by: DangerCI <danger@ci.com>
Approved-by: Ryo <ryo@ryo.com>
",
    "parents": Array [
      Object {
        "hash": "d802defdf0e6b4f85e01e48f2576b5f4ade8c77d",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/d802defdf0e6b4f85e01e48f2576b5f4ade8c77d",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/d802defdf0e6b4f85e01e48f2576b5f4ade8c77d",
          },
        },
        "type": "commit",
      },
      Object {
        "hash": "301b16bbd02e1f2107ce3e50812afd584c5a99e0",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/301b16bbd02e1f2107ce3e50812afd584c5a99e0",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/301b16bbd02e1f2107ce3e50812afd584c5a99e0",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>Merged in feature/app-icon-temp (<a href=\\"https://api.bitbucket.org/foo/bar/pull-requests/171/feature-app-icon-temp\\" rel=\\"nofollow\\" class=\\"ap-connect-link\\">pull request #171</a>)</p>
<p>Feature/app icon temp</p>
<p>Approved-by: DangerCI <a href=\\"/foo/bar/src/03ac2e2bbf14ea8c6cc40742e9db13e15cdda1b3/&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#101;&#100;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;\\">&#101;&#100;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;</a>
Approved-by: Ryo Hello <a href=\\"/foo/bar/src/03ac2e2bbf14ea8c6cc40742e9db13e15cdda1b3/&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#121;&#111;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;\\">&#114;&#121;&#111;&#64;&#97;&#112;&#112;&#115;&#121;&#110;&#116;&#104;&#46;&#110;&#101;&#116;</a></p>",
      "markup": "markdown",
      "raw": "Merged in feature/app-icon-temp (pull request #171)

Feature/app icon temp

Approved-by: DangerCI <danger@ci.com>
Approved-by: Ryo <ryo@ryo.com>
",
      "type": "rendered",
    },
    "type": "commit",
  },
  Object {
    "author": Object {
      "raw": "Danger <danger@abc.com>",
      "type": "author",
      "user": Object {
        "account_id": "5af3c70fa971e7674e4d8882",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5af3c70fa971e7674e4d8882/f7377cbf-0745-4562-9244-0f4547d6c1f7/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B72609b93-5f99-40f3-81d0-11a8eabf44ac%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B72609b93-5f99-40f3-81d0-11a8eabf44ac%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{72609b93-5f99-40f3-81d0-11a8eabf44ac}",
      },
    },
    "date": "2019-05-13T11:04:13+00:00",
    "hash": "301b16bbd02e1f2107ce3e50812afd584c5a99e0",
    "links": Object {
      "approve": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/301b16bbd02e1f2107ce3e50812afd584c5a99e0/approve",
      },
      "comments": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/301b16bbd02e1f2107ce3e50812afd584c5a99e0/comments",
      },
      "diff": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/diff/301b16bbd02e1f2107ce3e50812afd584c5a99e0",
      },
      "html": Object {
        "href": "https://bitbucket.org/foo/bar/commits/301b16bbd02e1f2107ce3e50812afd584c5a99e0",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/301b16bbd02e1f2107ce3e50812afd584c5a99e0",
      },
      "statuses": Object {
        "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/301b16bbd02e1f2107ce3e50812afd584c5a99e0/statuses",
      },
    },
    "message": "bump up version
",
    "parents": Array [
      Object {
        "hash": "25422a6589feee092d7e47f12c4e7a160d086f2b",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/25422a6589feee092d7e47f12c4e7a160d086f2b",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/25422a6589feee092d7e47f12c4e7a160d086f2b",
          },
        },
        "type": "commit",
      },
      Object {
        "hash": "d802defdf0e6b4f85e01e48f2576b5f4ade8c77d",
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/commits/d802defdf0e6b4f85e01e48f2576b5f4ade8c77d",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/d802defdf0e6b4f85e01e48f2576b5f4ade8c77d",
          },
        },
        "type": "commit",
      },
    ],
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
    "summary": Object {
      "html": "<p>bump up version</p>",
      "markup": "markdown",
      "raw": "bump up version
",
      "type": "rendered",
    },
    "type": "commit",
  },
]
`;

exports[`getPlatformReviewDSLRepresentation should get the metadata 1`] = `undefined`;

exports[`getPlatformReviewDSLRepresentation should get the pull request information 1`] = `
Object {
  "author": Object {
    "account_id": "5b3b3d9c50b3772e6bbda9f8",
    "display_name": "Hello Core",
    "links": Object {
      "avatar": Object {
        "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
      },
      "html": Object {
        "href": "https://bitbucket.org/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D/",
      },
      "self": Object {
        "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D",
      },
    },
    "nickname": "Hello Core",
    "type": "user",
    "uuid": "{b582acac-f1c1-47a8-a29b-e4c01c5274ab}",
  },
  "close_source_branch": true,
  "closed_by": null,
  "comment_count": 2,
  "created_on": "2019-06-18T11:40:02.316865+00:00",
  "description": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)
* Extract issue from PR title",
  "destination": Object {
    "branch": Object {
      "name": "develop",
    },
    "commit": Object {
      "hash": "8a2eb414cb5d",
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/commits/8a2eb414cb5d",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/8a2eb414cb5d",
        },
      },
      "type": "commit",
    },
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
  },
  "id": 324,
  "links": Object {
    "activity": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/activity",
    },
    "approve": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/approve",
    },
    "comments": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/comments",
    },
    "commits": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/commits",
    },
    "decline": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/decline",
    },
    "diff": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/diff",
    },
    "html": Object {
      "href": "https://bitbucket.org/foo/bar/pull-requests/324",
    },
    "merge": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/merge",
    },
    "self": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
    },
    "statuses": Object {
      "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/statuses",
    },
  },
  "merge_commit": null,
  "participants": Array [
    Object {
      "approved": false,
      "participated_on": null,
      "role": "REVIEWER",
      "type": "participant",
      "user": Object {
        "account_id": "5c04d48a470dea35d6932c45",
        "display_name": "Ryo",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/initials/RF-1.png",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B98a8e189-6ffd-4e11-9154-e0099023116a%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B98a8e189-6ffd-4e11-9154-e0099023116a%7D",
          },
        },
        "nickname": "Ryo",
        "type": "user",
        "uuid": "{98a8e189-6ffd-4e11-9154-e0099023116a}",
      },
    },
    Object {
      "approved": true,
      "participated_on": "2019-06-19T15:54:52.598340+00:00",
      "role": "REVIEWER",
      "type": "participant",
      "user": Object {
        "account_id": "5af3c70fa971e7674e4d8882",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5af3c70fa971e7674e4d8882/f7377cbf-0745-4562-9244-0f4547d6c1f7/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B72609b93-5f99-40f3-81d0-11a8eabf44ac%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B72609b93-5f99-40f3-81d0-11a8eabf44ac%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{72609b93-5f99-40f3-81d0-11a8eabf44ac}",
      },
    },
    Object {
      "approved": false,
      "participated_on": "2019-06-20T04:53:23.680568+00:00",
      "role": "PARTICIPANT",
      "type": "participant",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "Hello Core",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f1c1-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "Hello Core",
        "type": "user",
        "uuid": "{b582acac-f1c1-47a8-a29b-e4c01c5274ab}",
      },
    },
    Object {
      "approved": false,
      "participated_on": null,
      "role": "REVIEWER",
      "type": "participant",
      "user": Object {
        "account_id": "557058:53a98d23-e617-4d1b-b383-9ac62e7dc481",
        "display_name": "Apisit Onakekasit",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/557058:53a98d23-e617-4d1b-b383-9ac62e7dc481/531968cd-64e4-4a79-bbdf-88e8f5922b9e/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B900a244c-7ba5-483c-81c9-249ef6c2e4be%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B900a244c-7ba5-483c-81c9-249ef6c2e4be%7D",
          },
        },
        "nickname": "Apisit Onakekasit",
        "type": "user",
        "uuid": "{900a244c-7ba5-483c-81c9-249ef6c2e4be}",
      },
    },
    Object {
      "approved": false,
      "participated_on": null,
      "role": "REVIEWER",
      "type": "participant",
      "user": Object {
        "account_id": "557058:783407f6-2dec-4863-96af-93276fab4729",
        "display_name": "samsung",
        "links": Object {
          "avatar": Object {
            "href": "https://secure.gravatar.com/avatar/8f80a2914655c2dddf59bddd8af8e62d?d=https%3A%2F%2Favatar-management--avatars.us-west-2.prod.public.atl-paas.net%2Finitials%2FSS-6.png",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7B040f502e-0d42-478d-ac82-087f8a34a20b%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7B040f502e-0d42-478d-ac82-087f8a34a20b%7D",
          },
        },
        "nickname": "samsung",
        "type": "user",
        "uuid": "{040f502e-0d42-478d-ac82-087f8a34a20b}",
      },
    },
  ],
  "reason": "",
  "rendered": Object {
    "description": Object {
      "html": "<p>DONE:</p>
<ul>
<li>Create script checking current issue’s status before transit</li>
<li>Move script to bash instead of ruby (single source)</li>
<li>Extract issue from PR title</li>
</ul>",
      "markup": "markdown",
      "raw": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)
* Extract issue from PR title",
      "type": "rendered",
    },
    "title": Object {
      "html": "<p>Improve CI-JIRA-Danger workflow</p>",
      "markup": "markdown",
      "raw": "Improve CI-JIRA-Danger workflow",
      "type": "rendered",
    },
  },
  "reviewers": Array [
    Object {
      "account_id": "557058:783407f6-2dec-4863-96af-93276fab4729",
      "display_name": "samsung",
      "links": Object {
        "avatar": Object {
          "href": "https://secure.gravatar.com/avatar/8f80a2914655c2dddf59bddd8af8e62d?d=https%3A%2F%2Favatar-management--avatars.us-west-2.prod.public.atl-paas.net%2Finitials%2FSS-6.png",
        },
        "html": Object {
          "href": "https://bitbucket.org/%7B040f502e-0d42-478d-ac82-087f8a34a20b%7D/",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/users/%7B040f502e-0d42-478d-ac82-087f8a34a20b%7D",
        },
      },
      "nickname": "samsung",
      "type": "user",
      "uuid": "{040f502e-0d42-478d-ac82-087f8a34a20b}",
    },
    Object {
      "account_id": "5af3c70fa971e7674e4d8882",
      "display_name": "DangerCI",
      "links": Object {
        "avatar": Object {
          "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5af3c70fa971e7674e4d8882/f7377cbf-0745-4562-9244-0f4547d6c1f7/128",
        },
        "html": Object {
          "href": "https://bitbucket.org/%7B72609b93-5f99-40f3-81d0-11a8eabf44ac%7D/",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/users/%7B72609b93-5f99-40f3-81d0-11a8eabf44ac%7D",
        },
      },
      "nickname": "DangerCI",
      "type": "user",
      "uuid": "{72609b93-5f99-40f3-81d0-11a8eabf44ac}",
    },
    Object {
      "account_id": "5c04d48a470dea35d6932c45",
      "display_name": "Ryo",
      "links": Object {
        "avatar": Object {
          "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/initials/RF-1.png",
        },
        "html": Object {
          "href": "https://bitbucket.org/%7B98a8e189-6ffd-4e11-9154-e0099023116a%7D/",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/users/%7B98a8e189-6ffd-4e11-9154-e0099023116a%7D",
        },
      },
      "nickname": "Ryo",
      "type": "user",
      "uuid": "{98a8e189-6ffd-4e11-9154-e0099023116a}",
    },
  ],
  "source": Object {
    "branch": Object {
      "name": "fix/add-danger-message",
    },
    "commit": Object {
      "hash": "007bf2423436",
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/commits/007bf2423436",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/commit/007bf2423436",
        },
      },
      "type": "commit",
    },
    "repository": Object {
      "full_name": "foo/bar",
      "links": Object {
        "avatar": Object {
          "href": "https://bytebucket.org/ravatar/%7Bf6c37714-cfda-4298-aadb-08997b3eec24%7D?ts=default",
        },
        "html": Object {
          "href": "https://bitbucket.org/foo/bar",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar",
        },
      },
      "name": "foobar",
      "type": "repository",
      "uuid": "{f6c37714-cfda-4298-aadb-08997b3eec24}",
    },
  },
  "state": "OPEN",
  "summary": Object {
    "html": "<p>DONE:</p>
<ul>
<li>Create script checking current issue’s status before transit</li>
<li>Move script to bash instead of ruby (single source)</li>
<li>Extract issue from PR title</li>
</ul>",
    "markup": "markdown",
    "raw": "DONE:

* Create script checking current issue’s status before transit
* Move script to bash instead of ruby \\\\(single source\\\\)
* Extract issue from PR title",
    "type": "rendered",
  },
  "task_count": 0,
  "title": "Pull request title",
  "type": "pullrequest",
  "updated_on": "2019-06-20T04:53:28.436250+00:00",
}
`;

exports[`getPlatformReviewDSLRepresentation should get the reviewer comments 1`] = `
Array [
  Object {
    "comment": Object {
      "content": Object {
        "html": "<p>⚠️ 1 Warning. Don't worry, everything is fixable.</p>
<table>
<thead>
<tr>
<th></th>
<th>1 Warning</th>
</tr>
</thead>
<tbody>
<tr>
<td>⚠️</td>
<td>Couldn't find any related issue</td>
</tr>
</tbody>
</table>
<table>
<thead>
<tr>
<th></th>
<th>1 Message</th>
</tr>
</thead>
<tbody>
<tr>
<td>✨</td>
<td>Rerun Danger <a href=\\"https://bitbucket.org/foo/bar/addon/pipelines/home#!/results/1007\\" rel=\\"nofollow\\" class=\\"ap-connect-link\\">https://bitbucket.org/foo/bar/addon/pipelines/home#!/results/1007</a></td>
</tr>
</tbody>
</table>
<p>Generated by <a data-is-external-link=\\"true\\" href=\\"https://danger.systems/\\" rel=\\"nofollow\\" title=\\"generated_by_danger\\">Danger</a></p>",
        "markup": "markdown",
        "raw": "⚠️ 1 Warning. Don't worry, everything is fixable.

| | 1 Warning |
|---|---|
| ⚠️ | Couldn't find any related issue |

| | 1 Message |
|---|---|
| ✨ | Rerun Danger https://bitbucket.org/foo/bar/addon/pipelines/home#!/results/1007 |



Generated by [Danger](https://danger.systems/ \\"generated_by_danger\\")
",
        "type": "rendered",
      },
      "created_on": "2019-06-20T04:53:23.618489+00:00",
      "deleted": false,
      "id": 106400843,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324/_/diff#comment-106400843",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/comments/106400843",
        },
      },
      "pullrequest": Object {
        "id": 324,
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/pull-requests/324",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
          },
        },
        "title": "Test PR Title",
        "type": "pullrequest",
      },
      "type": "pullrequest_comment",
      "updated_on": "2019-06-20T04:53:23.680568+00:00",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
    },
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
  },
  Object {
    "comment": Object {
      "content": Object {
        "html": "<p>remove this file</p>",
        "markup": "markdown",
        "raw": "remove this file",
        "type": "rendered",
      },
      "created_on": "2019-06-18T18:23:19.626793+00:00",
      "deleted": false,
      "id": 106174425,
      "inline": Object {},
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324/_/diff#comment-106174425",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324/comments/106174425",
        },
      },
      "pullrequest": Object {
        "id": 324,
        "links": Object {
          "html": Object {
            "href": "https://bitbucket.org/foo/bar/pull-requests/324",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
          },
        },
        "title": "Test PR Title",
        "type": "pullrequest",
      },
      "type": "pullrequest_comment",
      "updated_on": "2019-06-18T18:23:19.636448+00:00",
      "user": Object {
        "account_id": "5b3b3d9c50b3772e6bbda9f8",
        "display_name": "DangerCI",
        "links": Object {
          "avatar": Object {
            "href": "https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5b3b3d9c50b3772e6bbda9f8/1a7a3e0f-84d7-4948-b107-77b744b4d1c6/128",
          },
          "html": Object {
            "href": "https://bitbucket.org/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D/",
          },
          "self": Object {
            "href": "https://api.bitbucket.org/2.0/users/%7Bb582acac-f2c2-47a8-a29b-e4c01c5274ab%7D",
          },
        },
        "nickname": "DangerCI",
        "type": "user",
        "uuid": "{b582acac-f2c2-47a8-a29b-e4c01c5274ab}",
      },
    },
    "pull_request": Object {
      "id": 324,
      "links": Object {
        "html": Object {
          "href": "https://bitbucket.org/foo/bar/pull-requests/324",
        },
        "self": Object {
          "href": "https://api.bitbucket.org/2.0/repositories/foo/bar/pullrequests/324",
        },
      },
      "title": "Test PR Title",
      "type": "pullrequest",
    },
  },
]
`;
